added generate quiz with ai

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -55,7 +55,7 @@
         
 
     </div>
-    <script src="{{ url_for('static', filename='js/questions.js') }}"></script>
+    <script src="{{ url_for('quiz_questions', id=id) }}"></script>
     <script src="{{ url_for('static', filename='js/quiz.js') }}"></script>
         
 </body>
