--- a/templates/energie.html
+++ b/templates/energie.html
@@ -78,10 +78,12 @@
         <!-- Début du code Jinja pour afficher les projets -->
         {% for project in projects %}
         <div class="sector">
-            <button class="delete-case" onclick="deleteProject({{ project.id }})">&times;</button>
+            <form action="{{ url_for('delete_project', id=project.id) }}" method="post" style="display:inline;">
+                <button type="submit" class="delete-case">&times;</button>
+            </form>
             <h2>{{ project.title }} par {{ project.full_name }}</h2>
             <a href="{{ url_for('static', filename='uploads/' + project.file_path) }}" download="{{ project.file_path }}"><i class="fa fa-download"></i>Télécharger PDF</a>
-            <button class="quiz">Quiz</button>
+            <button class="quiz" data-url="{{ url_for('quiz', id=project.id) }}">Quiz</button>
             <button class="case-study" onclick="window.location.href='{{ url_for('casia', project_id=project.id) }}'">Étude de Cas</button>
             <div class="case-content"></div>
         </div>
@@ -95,7 +97,7 @@
         <div id="quiz-modal" class="popup-form" style="display: none;">
             <div class="form-container">
                 <span class="close" onclick="closeModal()">&times;</span>
-                <iframe id="quiz-iframe" src="{{ url_for('quiz') }}" frameborder="0" style="width:100%; height:80vh;"></iframe>
+                <iframe id="quiz-iframe" src="{{ url_for('quiz', id=1 )}}" frameborder="0" style="width:100%; height:80vh;"></iframe>
             </div>
         </div>
 
@@ -137,7 +139,7 @@
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const quizUrls = [
-                "{{ url_for('quiz') }}",
+                "{{ url_for('quiz', id=0) }}",
                 "{{ url_for('quiz1') }}",
                 "{{ url_for('quiz2') }}",
                 "{{ url_for('quiz3') }}"
@@ -148,7 +150,9 @@
         
             quizButtons.forEach((button, index) => {
                 button.addEventListener('click', () => {
-                    quizIframe.src = quizUrls[index] ? quizUrls[index] :"{{ url_for('quiz') }}";
+                    const dataUrl = button.getAttribute('data-url');
+                    console.log(dataUrl)
+                    quizIframe.src = dataUrl ? dataUrl : quizUrls[index];
                     quizModal.style.display = 'block';
                 });
             });
@@ -231,29 +235,30 @@
                 <button class="case-study" onclick="window.location.href='/casia/${index}'">Étude de Cas</button>
                 <div class="case-content"></div>`;
     
-            var deleteButton = document.createElement('button');
-            deleteButton.classList.add('delete-case');
-            deleteButton.innerHTML = '&times;';
-            deleteButton.onclick = function () {
-                if (confirm('Êtes-vous sûr de vouloir supprimer ce projet ?')) {
-                    deleteProject(index);
-                    caseContent.remove();
-                }
-            };
-            caseContent.appendChild(deleteButton);
-            document.querySelector('.main-content').appendChild(caseContent);
-        }
-    
-        function deleteProject(projectId) {
-            fetch(`/delete_project/${projectId}`, { method: 'POST' })
-                .then(response => {
-                    if (response.ok) {
-                        location.reload();
-                    } else {
-                        alert('Erreur lors de la suppression du projet');
+          
+                var deleteButton = document.createElement('button');
+                deleteButton.classList.add('delete-case');
+                deleteButton.innerHTML = '&times;';
+                deleteButton.onclick = function () {
+                    if (confirm('Êtes-vous sûr de vouloir supprimer ce projet ?')) {
+                        deleteProject(project.id, caseContent);
                     }
-                });
-        }
+                };
+                caseContent.appendChild(deleteButton);
+
+                document.body.appendChild(caseContent);
+        };
+
+        // function deleteProject(projectId) {
+        //     fetch(`/delete_project/${projectId}`, { method: 'POST' })
+        //         .then(response => {
+        //             if (response.ok) {
+        //                 location.reload();
+        //             } else {
+        //                 alert('Erreur lors de la suppression du projet');
+        //             }
+        //         });
+        // }
     </script>
     <script>
         window.embeddedChatbotConfig = {
