--- a/static/css/energie.css
+++ b/static/css/energie.css
@@ -283,3 +283,24 @@
             font-size: 20px;
             cursor: pointer;
         }
+
+
+
+        .delete-case {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background-color: red;
+            color: white;
+            border: none;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        .sector {
+            position: relative;
+            padding: 20px;
+            margin: 20px 0;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+        }
