--- a/static/css/forum.css
+++ b/static/css/forum.css
@@ -27,3 +27,72 @@
     color: green;
 }
 
+
+.container {
+    width: 80%;
+    max-width: 800px;
+    margin-top: 20px;
+}
+h1 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+li {
+    background-color: white;
+    padding: 20px;
+    margin-bottom: 10px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+li h3 {
+    margin: 0;
+}
+li img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+    margin-top: 10px;
+}
+
+
+
+.container {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    width: 400px;
+    margin: 30px 0px;
+}
+h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+form p {
+    margin: 10px 0;
+}
+form input[type="text"], form textarea {
+    width: 95%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    color: black !important;
+    font-size: 20px !important;
+}
+form input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+form input[type="submit"]:hover {
+    background-color: #45a049;
+}
