--- a/templates/add_forum.html
+++ b/templates/add_forum.html
@@ -1,51 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Add Forum</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/acceuil.css') }}">
-    
-    <style>
-        
-        .container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-            width: 400px;
-            margin: 30px 0px;
-        }
-        h2 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        form p {
-            margin: 10px 0;
-        }
-        form input[type="text"], form textarea {
-            width: 95%;
-            padding: 10px;
-            margin-top: 5px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            color: black !important;
-            font-size: 20px !important;
-        }
-        form input[type="submit"] {
-            width: 100%;
-            padding: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        form input[type="submit"]:hover {
-            background-color: #45a049;
-        }
-    </style>
-</head>
-<body>
-    {% include 'header.html' %}
+{% extends "index.html" %}
+
+{% block title %}Ajouter Forum{% endblock %}
+
+{% block content %}
 
     <div class="container-wrapper">
         <div class="container">
@@ -56,7 +13,6 @@
                     {{ form.title.label }}<br>
                     {{ form.title(size=50) }}
                 <divp>
-              
                 <div>
                     {{ form.text.label }}<br>
                     {{ form.text(rows=10, cols=50) }}
@@ -65,5 +21,5 @@
             </form>
         </div>
     </div>
-</body>
-</html>
+
+{% endblock %}
