--- a/templates/connexion.html
+++ b/templates/connexion.html
@@ -43,6 +43,6 @@
             <p>&copy; 2024 Centrale de Cas. Tous droits réservés.</p>
         </footer>
     </div>
-    <!-- <script src="{{ url_for('static', filename='js/script.js') }}"></script> -->
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
