--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,29 +1,36 @@
- <div id="about-container">
-      <div class="wrapper">
-        <div id="github-container" class="clearfix">
-          <img src="https://i.ibb.co/jRZHsSb/logo-ecc-removebg-preview.png" alt="Github logo" style="float: left; display: block; height: 8.5rem; "/>
-          <div id="github-repositories" style="float: right; width: 50%; margin-top: 70px; ;">
-            <h3>Outils pédagogiques</h3>
-            <ul>
-              <li>Moteur d'Analyse IA : Exploitation de l'<a href="https://openai.com/" target="_blank" rel="noopener noreferrer">API OpenAI</a>.</li>
-              <li>Base de Données de Cas Pratiques : Archive consultable d'<a href="nouveau-lien-Base-Donnees" target="_blank" rel="noopener noreferrer">études de cas</a> précédemment générées.</li>
-              <li>Espace Collaboratif : Un <a href="nouveau-lien-Espace-Collaboratif" target="_blank" rel="noopener noreferrer">forum</a> pour échanger des idées.</li>
-            </ul>
-          </div>
-        </div style="float: left; width: 50%">
-        <article id="docs">
-          <h3>A&nbsp;propos de nous</h3>
-          <p>
-            Cette plateforme a été conçue dans le cadre du projet <strong>"Learning By Doing"</strong> sous le thème "Edtech: Les nouvelles technologies afin de réinventer la formation de l'ingénieur", une initiative de l'École Centrale Casablanca. Elle est le fruit du travail collaboratif du groupe LBD 29, encadré par <strong>DR. Jean-Pierre LLORED.</strong>
-          </p>
-          <h3>Contact</h3>
-          <ul>
-            <li> firdaws.ouahchi@centrale-casablanca.ma</li>
-            <li> tegawendeabdoulhakim.rouamba@centrale-casablanca.ma</li>
-            <li> nour.mazouz@centrale-casablanca.ma</li>
-            <li> yassine.ouassour@centrale-casablanca.ma</li>
-            <li> rydouane.simboro@centrale-casablanca.ma</li>
-          </ul>
-        </article>
+<div id="about-container">
+  <div class="wrapper">
+    <div id="github-container" class="clearfix">
+      <img src="https://i.ibb.co/jRZHsSb/logo-ecc-removebg-preview.png" alt="Github logo"
+        style="float: left; display: block; height: 8.5rem; " />
+      <div id="github-repositories" style="float: right; width: 50%; margin-top: 70px; ;">
+        <h3>Outils pédagogiques</h3>
+        <ul>
+          <li>Moteur d'Analyse IA : Exploitation de l'<a href="https://openai.com/" target="_blank"
+              rel="noopener noreferrer">API OpenAI</a>.</li>
+          <li>Base de Données de Cas Pratiques : Archive consultable d'<a href="nouveau-lien-Base-Donnees"
+              target="_blank" rel="noopener noreferrer">études de cas</a> précédemment générées.</li>
+          <li>Espace Collaboratif : Un <a href="nouveau-lien-Espace-Collaboratif" target="_blank"
+              rel="noopener noreferrer">forum</a> pour échanger des idées.</li>
+        </ul>
       </div>
-    </div>
+    </div style="float: left; width: 50%">
+    <article id="docs">
+      <h3>A&nbsp;propos de nous</h3>
+      <p>
+        Cette plateforme a été conçue dans le cadre du projet <strong>"Learning By Doing"</strong> sous le thème
+        "Edtech: Les nouvelles technologies afin de réinventer la formation de l'ingénieur", une initiative de l'École
+        Centrale Casablanca. Elle est le fruit du travail collaboratif du groupe LBD 29, encadré par <strong>DR.
+          Jean-Pierre LLORED.</strong>
+      </p>
+      <h3>Contact</h3>
+      <ul>
+        <li> firdaws.ouahchi@centrale-casablanca.ma</li>
+        <li> tegawendeabdoulhakim.rouamba@centrale-casablanca.ma</li>
+        <li> nour.mazouz@centrale-casablanca.ma</li>
+        <li> yassine.ouassour@centrale-casablanca.ma</li>
+        <li> rydouane.simboro@centrale-casablanca.ma</li>
+      </ul>
+    </article>
+  </div>
+</div>
